Thu Jul 18 15:42:01 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: fix spell miss.

Thu Jul 18 15:11:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ruby_safe_level_4): get rid of special
	  character.  [ruby-dev:47512] [misc #8646]

Thu Jul 18 14:51:39 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_alloc): slim setup process.

Thu Jul 18 14:37:57 2013  Koichi Sasada  <ko1@atdot.net>

	* string.c (str_alloc): no need to clear RString (already cleared).

Thu Jul 18 12:57:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BDIGITS_ZERO): Defined.
	  (bary_pack): Use BDIGITS_ZERO.
	  (bary_unpack): Ditto.
	  (bary_mul_single): Ditto.
	  (bary_mul_normal): Ditto.
	  (bary_sq_fast): Ditto.
	  (bary_mul_balance_with_mulfunc): Ditto.
	  (bary_mul_precheck): Ditto.
	  (bary_mul_toom3_branch): Ditto.
	  (rb_cstr_to_inum): Ditto.
	  (big_shift3): Ditto.
	  (bigmul1_toom3): Ditto.
	  (bary_divmod): Ditto.

Thu Jul 18 06:30:02 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename gc related functions with prefix "gc_".
	  * before_gc_sweep() -> gc_before_sweep().
	  * after_gc_sweep()  -> gc_after_sweep().
	  * lazy_sweep()      -> gc_lazy_sweep().
	  * rest_sweep()      -> gc_rest_sweep().
	  * slot_sweep()      -> gc_slot_sweep().

	* gc.c: rename a heap management function with prefix "heap_".
	  * get_freeobj() -> heap_get_freeobj().

	* gc.c: rename markable_object_p() to is_markable_object().

Wed Jul 17 22:57:40 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (delete_if_i): use ST_DELETE.

Wed Jul 17 22:34:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: An static assertion for relation of SIZEOF_LONG and
	  SIZEOF_BDIGITS is added.
	  (bary_mul_precheck): Reduce comparisons.
	  (bary_mul): Invoke bary_sq_fast or bary_mul1 if the bignum size is
	  small.
	  (bigfixize): Resize the argument bignum here.
	  (bignorm): Don't call bigtrunc after bigfixize.
